--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm S.R. Maddox!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+				<p>I'm a writer, RN and front end developer. I'm interested in taking on new challenges. 
+				<a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:sonjarmaddox.com">email</a></li>
+        		<li><a href="https://github.com/sonjarm">github.com/hankquinlan</a></li>
 			</ul>
 		</footer>
 	</body>
