--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:sonjarmaddox.com">email</a></li>
-        		<li><a href="https://github.com/sonjarm">github.com/hankquinlan</a></li>
+        		<li><a href="https://github.com/sonjarm">github.com/sonjarm</a></li>
 			</ul>
 		</footer>
 	</body>
